src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	html {
		@apply text-pri-base min-w-fit;
	}

	input {
		@apply px-2 py-1.5 border border-pri-light hover:border-pri-base focus:outline-pri-base text-tert-base;
	}
}

